Fix height on mobile

--- a/app/src/components/schedules/ScheduleDetail.module.scss
+++ b/app/src/components/schedules/ScheduleDetail.module.scss
@@ -19,7 +19,7 @@
   left: 50%;
   transform: translate(-50%, -50%);
   max-width: min(calc(100vw - 32px), pxToRem(880));
-  max-height: min(calc(100vh - 32px), pxToRem(440));
+  max-height: min(calc(100dvh - 32px), pxToRem(440));
   width: 100%;
   height: 100%;
   background-color: white;
@@ -50,7 +50,8 @@
 
   @media screen and (max-width: $breakpoint-sm) {
     max-width: min(calc(100vw - 16px), pxToRem(880));
-    max-height: min(calc(100vh - 16px), pxToRem(440));
+    max-height: calc(100dvh - 16px);
+    height: fit-content;
   }
 }
 
