--- a/app/src/styles/globals.scss
+++ b/app/src/styles/globals.scss
@@ -7,7 +7,8 @@
 
 main {
   width: 100vw;
-  height: 100vh;
+  height: 100dvh;
+  overflow: hidden;
 }
 
 body {
